myapp/templates/frontend/svcconnector.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-external
  namespace: frontend-namespace
spec:
  type: ExternalName
  externalName: backend.backend-namespace.svc.cluster.local
