myapp/templates/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend-namespace
  annotations:
    # السطر ده هو اللي هيخلي /api/signup تتحول لـ /signup قبل ما تروح للباك إند
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          # الجزء اللي بيربط الـ API بالباك إند
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service-external # السيرفيس اللي إنتي لسه عاملاها
                port:
                  number: 5000 # بورت الباك إند
